Mon Jun 18 06:16:39 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Tweak previous change.

Mon Jun 18 05:49:07 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix the "trim trailing formfeeds" code not to remove one
	  character too many.

Mon Jun 18 05:47:33 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc,xlsxparse.cc,xlsxparse.h: Rework .xlsx parsing to
	  substitute the shared strings into the positions they are used
	  in, so that the sample actually matches what appears in the
	  spreadsheet.

Mon Jun 18 04:49:12 GMT 2012  Olly Betts <olly@survex.com>

	* xlsxparse.cc,xlsxparse.h: Subclass XlsxParser directly from
	  HtmlParser.

Mon Jun 18 03:16:43 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc,xlsxparse.cc,xlsxparse.h: Index calculated
	  numbers from .xlsx files.

Wed Jun 13 04:53:02 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: pdftotext outputs a formfeed between each page, which
	  messes up our "empty body" check, so trim any trailing formfeeds
	  before the check.

Sat Jun 09 06:04:44 GMT 2012  Olly Betts <olly@survex.com>

	* Cherry pick changes from Mihai Bivol's GSoC snippets branch:
	* omindex.cc: Add option for the document sample size.
	* omindex.cc: Add short option for sample-size
	* omindex.cc: Make sample-size consistent with max-size

Sat Jun 02 12:23:21 GMT 2012  Olly Betts <olly@survex.com>

	* INSTALL,Makefile.am,cgiparam.cc,configfile.cc,configure.ac,
	  htmlparse.cc,omindex.cc,query.cc: Change `...' quoting in prose to
	  '...'.

Thu May 17 12:53:07 GMT 2012  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Change parsing of
	  multiple <body> tags and text outside of <body> to match the
	  behaviour if modern web browsers.  (ticket#599)

Tue May 15 12:46:15 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set link_all_deplibs_CXX=no on freebsd and openbsd,
	  like we already do for xapian-core.
