@@ -804,8 +804,11 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	// Remove any trailing formfeeds, so we don't consider them when
 	// considering if we extracted any text (e.g. pdftotext outputs a
 	// formfeed between each page, even for blank pages).
-	string::size_type trim_end = dump.find_last_not_of('\v');
-	if (trim_end != string::npos && ++trim_end != dump.size())
+	//
+	// If dump contain only formfeeds, then trim_end will be string::npos
+	// and ++trim_end will be 0, which is the correct new size.
+	string::size_type trim_end = dump.find_last_not_of('\f');
+	if (++trim_end != dump.size())
 	    dump.resize(trim_end);
 
 	if (dump.empty()) {
